cabal-version: 2.4

name: starclift
version: 0

executable starclift
  build-depends:
    base,
    -- containers,
    -- lens,
    -- generic-lens,
  default-extensions:
    -- BlockArguments
    DerivingStrategies
    -- LambdaCase
    -- TypeApplications
    -- ScopedTypeVariables
    -- OverloadedLabels
    -- DeriveGeneric
    -- RankNTypes
    -- ViewPatterns
    -- TypeOperators
    -- FlexibleInstances
    -- MultiParamTypeClasses
    -- DeriveAnyClass
    -- GeneralizedNewtypeDeriving
    -- InstanceSigs
    -- KindSignatures
    -- GADTs
  default-language: Haskell2010
  ghc-options: -Wall
  main-is: Main.hs
  other-modules:
    Game
    Player
